include_directories("../common")
include_directories("../caliper")

# A macro to include our service module sources in a static lib

macro(add_service_sources)
  file(RELATIVE_PATH _relpath "${CMAKE_SOURCE_DIR}/src/services" "${CMAKE_CURRENT_SOURCE_DIR}")
  foreach(_src ${ARGN})
    if (_relpath)
      list(APPEND CALIPER_SERVICES_SOURCES "${_relpath}/${_src}")
    else()
      list(APPEND CALIPER_SERVICES_SOURCES "${_src}")
    endif()
  endforeach()
  if (_relpath)
    set(CALIPER_SERVICES_SOURCES ${CALIPER_SERVICES_SOURCES} PARENT_SCOPE)
  endif()
endmacro()

add_service_sources(Services.cpp)

# if (LIBUNWIND_FOUND)
#   add_subdirectory(callpath)
# endif()
# if (PAPI_FOUND)
#   add_subdirectory(papi)
# endif()
add_subdirectory(debug)
add_subdirectory(pthread)
add_subdirectory(recorder)
add_subdirectory(timestamp)
if (MPI_C_FOUND)
  add_subdirectory(mpiwrap)
endif()
# if (Mitos_FOUND)
#   add_subdirectory(mitos)
# endif()
if (OMPT_FOUND)
  add_subdirectory(ompt)
endif()

add_library(caliper-services OBJECT ${CALIPER_SERVICES_SOURCES})
